deploy.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: maas-one-api
  labels:
    app: maas-one-api
spec:
  replicas: 3  # 根据需要设置副本数
  selector:
    matchLabels:
      app: maas-one-api
  template:
    metadata:
      labels:
        app: maas-one-api
    spec:
      nodeSelector:
          region: dx
      tolerations:
        - key: llmv3_26b
          value: "true"
          operator: Equal
      #hostNetwork: true
      dnsPolicy: Default
      containers:
        - name: maas-one-api
          image: "artifacts.iflytek.com/docker-private/maas/one-api:v3"
          command: 
          - sh
          - "/start.sh"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: oneapi-data
              mountPath: /data
            - name: oneapi-logs
              mountPath: /app/logs
            - name: podinfo
              mountPath: /etc/podinfo  # 挂载初始化容器输出的路径
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "1Gi"
      volumes:
        - name: oneapi-data
          hostPath:
            path: /data1/maas-oneapi  # 挂载主机目录
            type: DirectoryOrCreate
        - name: oneapi-logs
          hostPath:
            path: /var/log/maas-oneapi-logs
            type: DirectoryOrCreate
        - name: podinfo  # 用于存储 INIT 容器的输出
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: maas-one-api
spec:
  selector:
    app: maas-one-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP  # 你可以根据需求选择 ClusterIP、NodePort、LoadBalancer 等类型
